Fri Jan  9 11:20:24 2004  Siena.  <siena@faculty.chiba-u.jp>

	* ext/extmk.rb (extmake): should not reduce necessary libraries.
	  [ruby-dev:22440]

	* lib/mkmf.rb (merge_libs): merge libraries according to
	  dependency.

Fri Jan  9 10:05:23 2004  Siena.  <siena@faculty.chiba-u.jp>

	* lib/mkmf.rb (libpathflag): use single quotes.  [ruby-dev:22440]

Thu Jan  8 23:49:21 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (RDOCTARGET): new macro.  if you want to install
	  rdoc documentation, you need to run configure with
	  --enable-install-doc.

Thu Jan  8 21:17:43 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_pkey.c (ossl_pkey_to_der): removed; it returns
	  public key only.

	* ext/openssl/ossl_pkey_dh.c (ossl_dh_to_der): new function for
	  OpenSSL::PKey::DH#to_der.

	* ext/openssl/ossl_pkey_dsa.c (ossl_dsa_to_der): new function for
	  OpenSSL::PKey::DSA#to_der.

	* ext/openssl/ossl_pkey_rsa.c (ossl_rsa_to_der): new function for
	  OpenSSL::PKey::RSA#to_der.

Thu Jan  8 18:25:29 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_helper): should not recurse in exceptional status.

Thu Jan  8 16:51:04 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/wsdl/datetime/test_datetime.rb: fixed a stupid testcase which
	  dumps "E" at month-end.

Thu Jan  8 11:20:01 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* eval.c, object.c, process.c, re.c: don't use C++ style comments.

Thu Jan  8 08:46:14 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/rubyext.c (yaml_org_handler): lazy-load Date for
	  static-ext.

Thu Jan  8 07:06:30 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: preserve order in Setup.  [ruby-dev:22503]

	* ext/extmk.rb: move dependent libraries just after depended
	  libraries.

	* ext/digest/*/extconf.rb: depend on digest.

Thu Jan  8 04:36:17 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/cgi.rb (WEBrick::CGI#initialize): should create